@@ -1,7 +1,7 @@
 """Titiler Metadta models."""
 
 
-from typing import Any, Dict, List, Optional, Tuple, Union
+from typing import Any, Dict, List, Optional, Sequence, Tuple, Union
 
 from pydantic import BaseModel, Field
 
@@ -52,3 +52,62 @@ class cogMetadata(cogInfo):
     """COG metadata and statistics."""
 
     statistics: Dict[int, ImageStatistics]
+
+
+class CogeoInfoIFD(BaseModel):
+    """ImageFileDirectory info."""
+
+    Level: int
+    Width: int
+    Height: int
+    Blocksize: Tuple[int, int]
+    Decimation: int
+
+
+class CogeoInfoGeo(BaseModel):
+    """rio-cogeo validation GEO information."""
+
+    CRS: str
+    BoundingBox: Tuple[float, float, float, float]
+    Origin: Tuple[float, float]
+    Resolution: Tuple[float, float]
+
+
+class CogeoInfoProfile(BaseModel):
+    """rio-cogeo validation Profile information."""
+
+    Bands: int
+    Width: int
+    Height: int
+    Tiled: bool
+    Dtype: str
+    Interleave: str
+    AlphaBand: bool = Field(..., alias="Alpha Band")
+    InternalMask: bool = Field(..., alias="Internal Mask")
+    Nodata: Any
+    ColorInterp: Sequence[str]
+    ColorMap: bool
+    Scales: Sequence[float]
+    Offsets: Sequence[float]
+
+    class Config:
+        """Config for model."""
+
+        extra = "ignore"
+
+
+class RioCogeoInfo(BaseModel):
+    """COG Validation Info."""
+
+    Path: str
+    Driver: str
+    COG: bool
+    Compression: Optional[str]
+    ColorSpace: Optional[str]
+    COG_errors: Optional[Sequence[str]]
+    COG_warnings: Optional[Sequence[str]]
+
+    Profile: CogeoInfoProfile
+    GEO: CogeoInfoGeo
+    Tags: Dict[str, Any]
+    IFD: Sequence[CogeoInfoIFD]
