@@ -10,6 +10,7 @@
 - Remove /titiler/api submodule (e.g titiler.api.utils -> titiler.utils)
 - Add Cache-Control middleware. Endpoints do not define any cache-control headers. (part of #43, co-author with @geospatial-jeff)
 - Add 'X-Assets' in response headers for mosaic tiles (#51)
+- add cog validation endpoint (co-author with @geospatial-jeff, #37)
 
 2.1.2 (2020-06-24)
 ------------------
